--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: 'red';
   --foreground: #171717;
 }
 
@@ -17,5 +17,73 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif !important;
+}
+
+a {
+  @apply text-[15px] text-primary ;
+  position: relative;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  @apply text-primary;
+}
+
+.h1 {
+  @apply text-[44px] lg:text-[64px] leading-none;
+}
+
+.h2 {
+  @apply text-[50px] leading-tight;
+}
+
+.h3 {
+  @apply text-[25px];
+  position: relative;
+} 
+
+.h3::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  /* background-color: #18272F; */
+  @apply bg-primary;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.h3:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  /* background-color: #18272F; */
+  @apply bg-primary;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
