--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   font-family: "Poppins", sans-serif !important;
 }
 
-a {
+.links {
   @apply text-[15px] text-primary ;
   position: relative;
 }
@@ -36,7 +36,7 @@ p {
 }
 
 .h1 {
-  @apply text-[44px] lg:text-[64px] leading-none;
+  @apply text-[80px] lg:text-[180px] leading-none;
 }
 
 .h2 {
@@ -69,7 +69,7 @@ p {
   transform: scaleX(1);
 }
 
-a::before {
+.links::before {
   content: '';
   position: absolute;
   width: 100%;
@@ -84,7 +84,7 @@ a::before {
   transition: transform .3s ease-in-out;
 }
 
-a:hover::before {
+.links:hover::before {
   transform-origin: left;
   transform: scaleX(1);
 }
