--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,77 +14,19 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif !important;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: "Poppins", sans-serif !important;
-}
-
-.links {
-  @apply text-[15px] text-primary ;
-  position: relative;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  @apply text-primary;
-}
-
-.h1 {
-  @apply text-[80px] lg:text-[180px] leading-none;
-}
-
-.h2 {
-  @apply text-[50px] leading-tight;
-}
-
-.h3 {
-  @apply text-[25px];
-  position: relative;
-  cursor: pointer;
-} 
-
-.h3::before {
-  content: '';
-  position: absolute;
   width: 100%;
-  height: 4px;
-  border-radius: 4px;
-  /* background-color: #18272F; */
-  @apply bg-primary;
-  bottom: 0;
-  left: 0;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform .3s ease-in-out;
-}
-
-.h3:hover::before {
-  transform-origin: left;
-  transform: scaleX(1);
-}
-
-.links::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  border-radius: 4px;
-  /* background-color: #18272F; */
-  @apply bg-primary;
-  bottom: 0;
-  left: 0;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform .3s ease-in-out;
-}
-
-.links:hover::before {
-  transform-origin: left;
-  transform: scaleX(1);
+  height: 100%;
+  background: #EBEBEB;
 }
