--- a/src/app/home.css
+++ b/src/app/home.css
@@ -1,61 +1,217 @@
-.side-navbar {
-    /* height: 100vh; */
-    /* display: flex; */
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-
-.side-navbar ul {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.main {
-    color: black;
-    height: 3000px;
-}
-
-.resume-button {
-    display: block;
-    width: 250px;
-    height: 40px;
-    line-height: 40px;
-    text-decoration: none;
-    color: #292f36;
-    border: 1px solid #292f36;
-    letter-spacing: 2px;
-    text-align: center;
-    position: relative;
-    transition: all .5s;
-}
-
-.resume-button span {
-    position: relative;
-    z-index: 2;
-}
-
-.resume-button:after {
-    position: absolute;
-    content: '';
+.preloader {
+    background-color: #000;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 0;
-    height: 100%;
-    background: #292f36;
-    transition: all .5s;
+    z-index: 999;
+    overflow: hidden;
+    display: block; /* display block */
+    pointer-events: none;
 }
 
-.resume-button:hover {
-    color: #F3F4F6;
-}
-
-.resume-button:hover:after {
+#main {
     width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+
+header {
+    width: 100%;
+    padding-left: clamp(2.25rem, 2.1786rem + 0.3571vi, 2.5rem);
+    padding-right: clamp(2.25rem, 2.1786rem + 0.3571vi, 2.5rem);
+}
+
+.logoTag {
+    font-size: 30px;
+    font-weight: 800;
+}
+
+header .menu {
+    border-radius: 50px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+header a {
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+}
+
+header a::before,
+header a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    left: 0;
+}
+
+header a::before {
+    height: 2px;
+    background-color: #000;
+    bottom: 0;
+    transform-origin: 100% 50%;
+    transform: scaleX(0);
+    transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+header a::after {
+    content: attr(data-replace);
+    height: 100%;
+    top: 0;
+    transform-origin: 100% 50%;
+    transform: translate3d(200%, 0, 0);
+    transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+    color: #000;
+}
+
+header a:hover::before {
+    transform-origin: 0% 50%;
+    transform: scaleX(1);
+}
+
+header a:hover::after {
+    transform: translate3d(0, 0, 0);
+}
+
+.nav-link span {
+    display: inline-block;
+    transition: transform .3s cubic-bezier(0.76. 0, 0.24, 1);
+}
+
+header a:hover .nav-link span {
+    transform: translate3d(-200%, 0, 0);
+}
+
+/* Page css */
+
+#page {
+    width: 100%;
+    height: 100vh;
+    padding-left: clamp(2.25rem, 2.1786rem + 0.3571vi, 2.5rem);
+    padding-right: clamp(2.25rem, 2.1786rem + 0.3571vi, 2.5rem);
+}
+
+#page .nasir h1 {
+    text-wrap: balance;
+    line-height: 1;
+    letter-spacing: -0.025em;
+    font-size: 202px;
+    font-weight: 530;
+    color: #000;
+}
+
+.nasirSvg {
+    width: 100%;
+    height: 100%;
+}
+
+#page .nasir .nasirSvg {
+    transform: translateY(100%);
+    opacity: 0;
+}
+
+
+#page .details {
+    display: grid;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    margin-top: 4rem;
+    position: relative;
+    /* height: 30vh; */
+    padding-bottom: 4rem;
+}
+
+#page .details .left {
+    height: 35vh;
+    grid-column: span 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+#page .details .left p {
+    font-size: clamp(1rem, 0.9286rem + 0.3571vi, 1.25rem);
+    color: #000;
+    max-width: 30vw;
+    line-height: 120%;
+    text-wrap: balance;
+    text-align: left;
+}
+
+#page .details .left button {
+    background-color: #000;
+    padding-left: 2.75rem;
+    padding-right: 2.75rem;
+    padding-top: 1.125rem;
+    padding-bottom: 1.125rem;
+    color:  #EBEBEB;
+    letter-spacing: 0;
+    text-transform: uppercase;
+    font-size: clamp(1rem, 0.9286rem + 0.3571vi, 1.25rem);
+    border: none;
+    border-radius: 50px;
+}
+
+#page .details .left button:hover {
+    background-color: #fff;
+}
+
+#page .details .middle {
+    grid-column: span 4;
+    height: 35vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#page .details .middle .nas-image {
+    overflow: hidden;
+    width: 20vw;
+    height: 45vh;
+    position: relative;
+}
+
+#page .details .middle .nas-image img {
+    filter: grayscale(100%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+    transition: all 0.3s linear ;
+}
+
+#page .details .middle .nas-image img:hover {
+    filter: grayscale(0);
+}
+
+#page .details .right {
+    height: 35vh;
+    grid-column: span 4;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    flex-direction: column;
+}
+
+#page .details .right p {
+    font-size: clamp(0.875rem, 0.5393rem + 0.5786vi, 1rem);
+    color: #000;
+    text-transform: uppercase;
+}
+
+#page .details .right h2 {
+    font-size: clamp(3rem, 2.25rem + 3.75vi, 5.625rem);
+    color: #000;
+    font-weight: 700;
+    text-transform: uppercase;
 }
